[package]
name = "rust-crawler"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hackernews"
required-features = ["tokio"]

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
futures-timer = "3.0.2"
rand = "0.8.5"
reqwest = "0.11.11"
robotstxt = "0.3.0"
scraper = "0.13.0"
thiserror = "1.0.31"
tokio = { version = "1.15", features = ["full"] }
html5ever = "0.25"
thirtyfour = "0.31.0"
